--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "format": "prettier src/**/*.js --semi=false --single-quote --write",
     "build": "rollup -n css-literal -f umd -i src/index.js -o dist/index.js",
     "test": "ava",
-    "coverage": "nyc -a -r text npm test"
+    "coverage": "nyc -a npm test"
   }
 }
