--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "homepage": "https://github.com/benjaminj6/css-literal#readme",
   "devDependencies": {
     "ava": "^0.19.1",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.5.1",
     "babel-register": "^6.24.1",
     "nyc": "^11.0.2",
     "prettier": "^1.4.2",
-    "rollup": "^0.42.0"
+    "rollup": "^0.42.0",
+    "rollup-plugin-babel": "^2.7.1"
   },
   "babel": {
     "presets": [
@@ -41,7 +43,7 @@
   },
   "scripts": {
     "format": "prettier src/**/*.js --semi=false --single-quote --write",
-    "build": "rollup -n css-literal -f umd -i src/index.js -o dist/index.js",
+    "build": "rollup -c",
     "test": "ava",
     "coverage": "nyc -a npm test"
   }
