--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "twirl-js",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Write CSS objects as template literals",
   "main": "dist/index.js",
   "jsnext:main": "src/index.js",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/benjaminj6/twirl-js.git"
