--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
     "test": "BABEL_ENV=test ava",
     "coverage": "nyc -a npm test",
     "prepublish": "npm run build && npm run test",
-    "publish": "git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags && npm publish"
+    "publish": "git commit -am $npm_package_version && git push && npm publish"
   }
 }
